build/src/frontend/antlr4cpp_generated_src/modelica/modelicaParser.cpp

// Generated from /test/Modelica-Compiler/grammar/modelica.g4 by ANTLR 4.9.3


#include "modelicaVisitor.h"

#include "modelicaParser.h"


using namespace antlrcpp;
using namespace antlr4;

modelicaParser::modelicaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

modelicaParser::~modelicaParser() {
  delete _interpreter;
}

std::string modelicaParser::getGrammarFileName() const {
  return "modelica.g4";
}

const std::vector<std::string>& modelicaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& modelicaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Stored_definitionContext ------------------------------------------------------------------

modelicaParser::Stored_definitionContext::Stored_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* modelicaParser::Stored_definitionContext::EOF() {
  return getToken(modelicaParser::EOF, 0);
}

tree::TerminalNode* modelicaParser::Stored_definitionContext::WITHIN() {
  return getToken(modelicaParser::WITHIN, 0);
}

std::vector<tree::TerminalNode *> modelicaParser::Stored_definitionContext::SEMI() {
  return getTokens(modelicaParser::SEMI);
}

tree::TerminalNode* modelicaParser::Stored_definitionContext::SEMI(size_t i) {
  return getToken(modelicaParser::SEMI, i);
}

std::vector<modelicaParser::Class_definitionContext *> modelicaParser::Stored_definitionContext::class_definition() {
  return getRuleContexts<modelicaParser::Class_definitionContext>();
}

modelicaParser::Class_definitionContext* modelicaParser::Stored_definitionContext::class_definition(size_t i) {
  return getRuleContext<modelicaParser::Class_definitionContext>(i);
}

modelicaParser::NameContext* modelicaParser::Stored_definitionContext::name() {
  return getRuleContext<modelicaParser::NameContext>(0);
}

std::vector<tree::TerminalNode *> modelicaParser::Stored_definitionContext::FINAL() {
  return getTokens(modelicaParser::FINAL);
}

tree::TerminalNode* modelicaParser::Stored_definitionContext::FINAL(size_t i) {
  return getToken(modelicaParser::FINAL, i);
}


size_t modelicaParser::Stored_definitionContext::getRuleIndex() const {
  return modelicaParser::RuleStored_definition;
}


antlrcpp::Any modelicaParser::Stored_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitStored_definition(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Stored_definitionContext* modelicaParser::stored_definition() {
  Stored_definitionContext *_localctx = _tracker.createInstance<Stored_definitionContext>(_ctx, getState());
  enterRule(_localctx, 0, modelicaParser::RuleStored_definition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::T__0) {
      setState(204);
      match(modelicaParser::T__0);
    }
    setState(212);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::WITHIN) {
      setState(207);
      match(modelicaParser::WITHIN);
      setState(209);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::IDENT) {
        setState(208);
        name();
      }
      setState(211);
      match(modelicaParser::SEMI);
    }
    setState(222);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << modelicaParser::FINAL)
      | (1ULL << modelicaParser::ENCAPSULATED)
      | (1ULL << modelicaParser::PARTIAL)
      | (1ULL << modelicaParser::CLASS)
      | (1ULL << modelicaParser::MODEL)
      | (1ULL << modelicaParser::OPERATOR)
      | (1ULL << modelicaParser::RECORD)
      | (1ULL << modelicaParser::BLOCK)
      | (1ULL << modelicaParser::EXPANDABLE)
      | (1ULL << modelicaParser::CONNECTOR)
      | (1ULL << modelicaParser::TYPE)
      | (1ULL << modelicaParser::PACKAGE)
      | (1ULL << modelicaParser::PURE)
      | (1ULL << modelicaParser::IMPURE)
      | (1ULL << modelicaParser::FUNCTION))) != 0)) {
      setState(215);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::FINAL) {
        setState(214);
        match(modelicaParser::FINAL);
      }
      setState(217);
      class_definition();
      setState(218);
      match(modelicaParser::SEMI);
      setState(224);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(225);
    match(modelicaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_definitionContext ------------------------------------------------------------------

modelicaParser::Class_definitionContext::Class_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::Class_prefixesContext* modelicaParser::Class_definitionContext::class_prefixes() {
  return getRuleContext<modelicaParser::Class_prefixesContext>(0);
}

modelicaParser::Class_specifierContext* modelicaParser::Class_definitionContext::class_specifier() {
  return getRuleContext<modelicaParser::Class_specifierContext>(0);
}

tree::TerminalNode* modelicaParser::Class_definitionContext::ENCAPSULATED() {
  return getToken(modelicaParser::ENCAPSULATED, 0);
}


size_t modelicaParser::Class_definitionContext::getRuleIndex() const {
  return modelicaParser::RuleClass_definition;
}


antlrcpp::Any modelicaParser::Class_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitClass_definition(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Class_definitionContext* modelicaParser::class_definition() {
  Class_definitionContext *_localctx = _tracker.createInstance<Class_definitionContext>(_ctx, getState());
  enterRule(_localctx, 2, modelicaParser::RuleClass_definition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(228);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::ENCAPSULATED) {
      setState(227);
      match(modelicaParser::ENCAPSULATED);
    }
    setState(230);
    class_prefixes();
    setState(231);
    class_specifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_prefixesContext ------------------------------------------------------------------

modelicaParser::Class_prefixesContext::Class_prefixesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::CLASS() {
  return getToken(modelicaParser::CLASS, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::MODEL() {
  return getToken(modelicaParser::MODEL, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::RECORD() {
  return getToken(modelicaParser::RECORD, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::BLOCK() {
  return getToken(modelicaParser::BLOCK, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::CONNECTOR() {
  return getToken(modelicaParser::CONNECTOR, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::TYPE() {
  return getToken(modelicaParser::TYPE, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::PACKAGE() {
  return getToken(modelicaParser::PACKAGE, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::FUNCTION() {
  return getToken(modelicaParser::FUNCTION, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::OPERATOR() {
  return getToken(modelicaParser::OPERATOR, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::PARTIAL() {
  return getToken(modelicaParser::PARTIAL, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::EXPANDABLE() {
  return getToken(modelicaParser::EXPANDABLE, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::PURE() {
  return getToken(modelicaParser::PURE, 0);
}

tree::TerminalNode* modelicaParser::Class_prefixesContext::IMPURE() {
  return getToken(modelicaParser::IMPURE, 0);
}


size_t modelicaParser::Class_prefixesContext::getRuleIndex() const {
  return modelicaParser::RuleClass_prefixes;
}


antlrcpp::Any modelicaParser::Class_prefixesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitClass_prefixes(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Class_prefixesContext* modelicaParser::class_prefixes() {
  Class_prefixesContext *_localctx = _tracker.createInstance<Class_prefixesContext>(_ctx, getState());
  enterRule(_localctx, 4, modelicaParser::RuleClass_prefixes);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(234);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == modelicaParser::PARTIAL) {
      setState(233);
      match(modelicaParser::PARTIAL);
    }
    setState(257);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      setState(236);
      match(modelicaParser::CLASS);
      break;
    }

    case 2: {
      setState(237);
      match(modelicaParser::MODEL);
      break;
    }

    case 3: {
      setState(239);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::OPERATOR) {
        setState(238);
        match(modelicaParser::OPERATOR);
      }
      setState(241);
      match(modelicaParser::RECORD);
      break;
    }

    case 4: {
      setState(242);
      match(modelicaParser::BLOCK);
      break;
    }

    case 5: {
      setState(244);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::EXPANDABLE) {
        setState(243);
        match(modelicaParser::EXPANDABLE);
      }
      setState(246);
      match(modelicaParser::CONNECTOR);
      break;
    }

    case 6: {
      setState(247);
      match(modelicaParser::TYPE);
      break;
    }

    case 7: {
      setState(248);
      match(modelicaParser::PACKAGE);
      break;
    }

    case 8: {
      setState(250);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::PURE

      || _la == modelicaParser::IMPURE) {
        setState(249);
        _la = _input->LA(1);
        if (!(_la == modelicaParser::PURE

        || _la == modelicaParser::IMPURE)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(253);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == modelicaParser::OPERATOR) {
        setState(252);
        match(modelicaParser::OPERATOR);
      }
      setState(255);
      match(modelicaParser::FUNCTION);
      break;
    }

    case 9: {
      setState(256);
      match(modelicaParser::OPERATOR);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdContext ------------------------------------------------------------------

modelicaParser::IdContext::IdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* modelicaParser::IdContext::IDENT() {
  return getToken(modelicaParser::IDENT, 0);
}


size_t modelicaParser::IdContext::getRuleIndex() const {
  return modelicaParser::RuleId;
}


antlrcpp::Any modelicaParser::IdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitId(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::IdContext* modelicaParser::id() {
  IdContext *_localctx = _tracker.createInstance<IdContext>(_ctx, getState());
  enterRule(_localctx, 6, modelicaParser::RuleId);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(259);
    match(modelicaParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_specifierContext ------------------------------------------------------------------

modelicaParser::Class_specifierContext::Class_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::Long_class_specifierContext* modelicaParser::Class_specifierContext::long_class_specifier() {
  return getRuleContext<modelicaParser::Long_class_specifierContext>(0);
}

modelicaParser::Short_class_specifierContext* modelicaParser::Class_specifierContext::short_class_specifier() {
  return getRuleContext<modelicaParser::Short_class_specifierContext>(0);
}

modelicaParser::Der_class_specifierContext* modelicaParser::Class_specifierContext::der_class_specifier() {
  return getRuleContext<modelicaParser::Der_class_specifierContext>(0);
}


size_t modelicaParser::Class_specifierContext::getRuleIndex() const {
  return modelicaParser::RuleClass_specifier;
}


antlrcpp::Any modelicaParser::Class_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitClass_specifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Class_specifierContext* modelicaParser::class_specifier() {
  Class_specifierContext *_localctx = _tracker.createInstance<Class_specifierContext>(_ctx, getState());
  enterRule(_localctx, 8, modelicaParser::RuleClass_specifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(264);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(261);
      long_class_specifier();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(262);
      short_class_specifier();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(263);
      der_class_specifier();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Long_class_specifierContext ------------------------------------------------------------------

modelicaParser::Long_class_specifierContext::Long_class_specifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<modelicaParser::IdContext *> modelicaParser::Long_class_specifierContext::id() {
  return getRuleContexts<modelicaParser::IdContext>();
}

modelicaParser::IdContext* modelicaParser::Long_class_specifierContext::id(size_t i) {
  return getRuleContext<modelicaParser::IdContext>(i);
}

modelicaParser::String_commentContext* modelicaParser::Long_class_specifierContext::string_comment() {
  return getRuleContext<modelicaParser::String_commentContext>(0);
}

modelicaParser::CompositionContext* modelicaParser::Long_class_specifierContext::composition() {
  return getRuleContext<modelicaParser::CompositionContext>(0);
}

tree::TerminalNode* modelicaParser::Long_class_specifierContext::END() {
  return getToken(modelicaParser::END, 0);
}

tree::TerminalNode* modelicaParser::Long_class_specifierContext::EXTENDS() {
  return getToken(modelicaParser::EXTENDS, 0);
}

modelicaParser::Class_modificationContext* modelicaParser::Long_class_specifierContext::class_modification() {
  return getRuleContext<modelicaParser::Class_modificationContext>(0);
}


size_t modelicaParser::Long_class_specifierContext::getRuleIndex() const {
  return modelicaParser::RuleLong_class_specifier;
}


antlrcpp::Any modelicaParser::Long_class_specifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitLong_class_specifier(this);
  else
    return visitor->visitChildren(this);
}

modelicaParser::Long_class_specifierContext* modelicaParser::long_class_specifier() {
  Long_class_specifierContext *_localctx = _tracker.createInstance<Long_class_specifierContext>(_ctx, getState());
  enterRule(_localctx, 10, modelicaParser::RuleLong_class_specifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(282);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case modelicaParser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(266);
        id();
        setState(267);
        string_comment();
        setState(268);
        composition();
        setState(269);
        match(modelicaParser::END);
        setState(270);
        id();
        break;
      }

      case modelicaParser::EXTENDS: {
        enterOuterAlt(_localctx, 2);
        setState(272);
        match(modelicaParser::EXTENDS);
        setState(273);
        id();
        setState(275);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == modelicaParser::LPAREN) {
          setState(274);
          class_modification();
        }
        setState(277);
        string_comment();
        setState(278);
        composition();
        setState(279);
        match(modelicaParser::END);
        setState(280);
        id();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Short_class_specifier_nameContext ------------------------------------------------------------------

modelicaParser::Short_class_specifier_nameContext::Short_class_specifier_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

modelicaParser::IdContext* modelicaParser::Short_class_specifier_nameContext::id() {
  return getRuleContext<modelicaParser::IdContext>(0);
}


size_t modelicaParser::Short_class_specifier_nameContext::getRuleIndex() const {
  return modelicaParser::RuleShort_class_specifier_name;
}


antlrcpp::Any modelicaParser::Short_class_specifier_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<modelicaVisitor*>(visitor))
    return parserVisitor->visitShort_class_specifier_name(this);
  else
    return visitor->visitChildren(this);
}
